# ph_cmake

./: CMakeLists.txt  README.md  fitta  kuk
cmake/: fetch.cmake
cmake_functions/: Create_cmake_files.cmake  Create_cpp_executables.cmake  Create_cpp_files.cmake  Create_cpp_tests.cmake  Create_file.cmake  Create_files.cmake  Fetch.cmake  Files.cmake  IDE.cmake  Lambda.cmake  cmake_files.cmake  cpplibs.cmake  create_cpp_class_files.cmake  create_files.cmake  fetch.cmake  parse.cmake
cmake_functions/tests/cpplibprojtest/: CMakeLists.txt
cmake_tests/: test_create_files.cmake  test_tests.cmake
tests/: CMakeLists.txt  test_Files.cmake
